--- a/styles/style.css
+++ b/styles/style.css
@@ -2,6 +2,8 @@
 *::before,
 *::after {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
 }
 
 html {
@@ -11,7 +13,7 @@ html {
 .page {
   display: flex;
   width: 1200px;
-  height: 800px;
+  height: 100%;
   inline-size: 1200px;
   block-size: 100%;
   margin: auto;
@@ -54,10 +56,9 @@ ol {
 }
 
 .content {
-  max-width: 1140px;
   width: 100%;
-  max-height: 534px;
   height: 100%;
+  padding: 12% 3%;
   display: grid;
   display: flex;
   grid-template-areas: "result details";
@@ -68,7 +69,9 @@ ol {
 }
 
 .result {
-  max-height: 456px;
+  display: flex;
+  flex-direction: column;
+  justify-content: end;
   height:100%;
 }
 
@@ -82,12 +85,13 @@ ol {
   width: 711px;
   height: 386px;
   margin-bottom: 16px;
-  }
+}
   
 .result__video {
-  width: 711px;
-  height: 386px;
-  object-fit: fill;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  object-position: center;
 }
 
 .search-form__label:has(.search-form__textfield:focus-visible) {
@@ -95,47 +99,29 @@ ol {
   outline-offset: 1px;
 }
 
-.search-form{
-  max-height: 54px;
-  height: 100%;
+.search-form {
   display: grid;
   grid-template-areas: "city time button";
   grid-auto-columns: 225px 212px 194px;
   align-items: start;
   justify-content: center;
-
   gap: 40px;
 }
 
-fieldset {
-  grid-area: "city";
-  width: 225px;
+.search-form__fieldset {
   border: none;
-  line-height: 5px;
-}
-
-.search-form__fieldset-title {
-  width: 100%;
-  font-family: "Fira Sans" Condensed;
-  font-weight: 400;
-  font-size: 18px;
-  line-height: 100%;  
-  letter-spacing: 0%;
 }
 
 .search-form > .search-form__label {
-  width: 59px;
   display: flex;
   flex-direction: row;
   align-items: center;
   padding: 0px;
   gap: 5px;
-  }
+}
 
 .search-form__label {
-  position: relative;
   width:100%;
-
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -149,20 +135,18 @@ fieldset {
   border: none;
   border-top:  1px solid #FFFFFF;
   border-bottom:  1px solid #FFFFFF;
-  font-family: "Fira Sans Condensed";
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;
   letter-spacing: 0%;
   background-color: inherit;
   appearance: none;
-  
-
+  color: white;
 }
 
-.search-form__label:has(.search-form__textfield:focus-visible) {
-  outline: 1px solid #FFFFFF;
-  outline-offset: 1px;
+.search-form__textfield:focus {
+  outline: none;
 }
 
 .search-form__label:has(.search-form__checkbox:hover) {
@@ -207,11 +191,10 @@ input[type="checkbox"]:checked + .search-form__pseudo-checkbox::after {
   height: 19px;
   border: 1px solid #FFFFFF; 
   margin-right: 5px;
-
 }
 
 .search-form__fieldset-title {
-  font-family: "Fira Sans" Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 100%;  
@@ -239,7 +222,7 @@ button:focus-visible {
   width: 100%;
   border: 1px solid #FFFFFF;
   background-color: inherit;
-  font-family: Fira Sans Condensed;
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 700;
   font-size: 18px;
   line-height: 100%;
@@ -252,13 +235,9 @@ button:focus-visible {
 align-self: end;
 }
 
-.more-button {
-
-}
-
-.content__details {
-  
+.content__details { 
   height: 100%;
+  min-height: 534px;
   width: 100%;
   display: flex;
   justify-content: start;
@@ -266,10 +245,8 @@ align-self: end;
 }
 
 .content__details > .title {
-  max-height: 210px;
-  height: 100%;
   margin-bottom: 20px;
-  font-family: "Oswald";
+  font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 75px;
   line-height: 94%;
@@ -285,8 +262,7 @@ align-self: end;
 .content__list-container {
   position: relative;
   height: 100%;
-  overflow-y: scroll;
-  overflow-x: hidden;
+  overflow-y: auto;
   white-space: nowrap;
   gap: 30px;
   justify-content: start;
@@ -295,25 +271,24 @@ align-self: end;
 
 .content__list-item {
   display: block;
-  margin-bottom: 30px ;
+  margin-bottom: 27px ;
   padding: 3px;
 }
 
-.content__card-link:has(.content__card-link_current:hover) {
+.content__card-link_current {
   background-color: #545050;
 }
-
 
 .content__list-item:active {
   background-color: #545050;
 }
 
-.content__list-item:hover {
+.content__card-link:hover {
   text-decoration: underline 1px solid #FFFFFF;
   cursor: pointer;
 }
 
-.content__list-item:focus { 
+.content__card-link:focus { 
   border: none;
 }
 
@@ -323,11 +298,10 @@ align-self: end;
 
 .content__video-card-title {
   display: block;
-  height: 40px;
   font-family: "Oswald", sans-serif;
   font-weight: 700;
   font-size: 30px;
-  line-height: 40px;
+  line-height: 100%;
   letter-spacing: 0%;
   text-transform: uppercase;
   overflow: hidden;
@@ -335,46 +309,44 @@ align-self: end;
   text-overflow: ellipsis;
   width: 100%;
   max-width: 196px;
-
 }
 
-ç{
-  font-family: "Fira Sans Condensed";
+.content__video-card-description {
+  font-family: "Fira Sans Condensed", sans-serif;
   font-weight: 400;
   font-size: 18px;
   line-height: 16.2px;
   letter-spacing: 0%;
-  
   line-clamp: inherit;
 
 }
 
 .content__card-link {
+  display: block;
   text-decoration: none;
   color: #FFFFFF;
 }
 
 .content__video-card {
-  min-height: 103px;
-  height: 100%;
   display: grid;
+  display: flex;
   grid-template-columns: max-content auto;
   align-content: start;
-  
 } 
 
 .content__video-card-thumbnail {
   height: 103px;
-  width: 194px;
+  max-width: 194px;
+  width: 100%;
   object-fit:cover;
   object-position: center;
+
 }
 
 .content__video-card-description-container {
   flex-grow: 2;
+  width:100%;
   flex-direction: column;
-  width: 196px;
-  height: 103px;
   line-height: 10px;
 }
 
