--- a/styles/style.css
+++ b/styles/style.css
@@ -20,6 +20,7 @@ html {
   font-size: 18px;
   background-color: #1b1919;
   place-items: center;
+  align-self: center;
 }
 
 h1,
@@ -54,7 +55,7 @@ ol {
 .content {
   width: 100%;
   height: 100%;
-  padding: 12.5% 2.55% 0;
+  padding: 11.085% 2.55% 0;
   display: grid;
   grid-template-areas: "result details";
   grid-template-rows: 1fr 0.9fr;
@@ -268,10 +269,6 @@ button:focus-visible {
 .content__list {
   padding-top: 3px;
   width: 100%;
-}
-
-.content__card-link:focus {
-  outline: none;
 }
 
 .content__card-link:focus-visible {
