--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,4 @@
+
 *,
 *::before,
 *::after {
@@ -55,7 +56,7 @@ ol {
 .content {
   width: 100%;
   height: 100%;
-  padding: 11.085% 2.55% 0;
+  padding: 136px 2.55% 0;
   display: grid;
   grid-template-areas: "result details";
   grid-template-rows: 1fr 0.9fr;
