--- a/styles/style.css
+++ b/styles/style.css
@@ -15,13 +15,12 @@ html {
   display: flex;
   inline-size: 1200px;
   block-size: 100%;
-  margin: auto;
+  margin: 0 auto;
   color: #fff;
-  font-family: "Fira Sans Condensed", sans-serif;
+  font-family: 'Fira Sans Condensed', sans-serif;
   font-size: 18px;
   background-color: #1b1919;
-  place-items: center;
-  align-self: center;
+  
 }
 
 h1,
@@ -54,9 +53,9 @@ ol {
 }
 
 .content {
-  width: 100%;
+  width: 1140px;
   height: 100%;
-  padding: 136px 2.55% 0;
+  padding: 136px 0;
   display: grid;
   grid-template-areas: "result details";
   grid-template-rows: 1fr 0.9fr;
@@ -64,6 +63,8 @@ ol {
   gap: 27px;
   align-items: end;
   justify-items: end;
+  place-self: center;
+  margin: 0 auto;
 }
 
 .result {
